fetching movie details from OMDb

--- a/cinema-api/pom.xml
+++ b/cinema-api/pom.xml
@@ -44,6 +44,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.tytuspawlak.cinema</groupId>
+			<artifactId>cinema-core-external-catalog</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
