--- a/cinema-api/src/main/resources/application.properties
+++ b/cinema-api/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=cinema
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
+
+cinema.externalcatalog.omdb.apiUrl=https://www.omdbapi.com
+cinema.externalcatalog.omdb.apiKey=
